@@ -1,0 +1,8 @@
+# -*- coding: utf-8 -*-
+
+from distutils.core import setup
+
+setup(name='normalize_name',
+      version='0.1',
+      py_modules=['normalize_name'],
+      )
